fix: Configure Vercel deployment for static site
- Add vercel.json configuration for proper static site deployment
- Update build script to return success status
- Add Node.js engine requirement for Vercel compatibility
- Configure routing to serve index.html for all routes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npx live-server --port=3000 --open=/index.html",
     "dev": "npx live-server --port=3000 --open=/index.html --watch=.",
-    "build": "echo 'Static site - no build process needed'",
+    "build": "echo 'Build completed - static site ready'",
     "deploy": "echo 'Ready for deployment to any static hosting service'"
   },
   "keywords": [
@@ -21,6 +21,9 @@
   "license": "MIT",
   "devDependencies": {
     "live-server": "^1.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
