fix: Update portfolio to full-stack developer focus and fix CSS loading
- Update hero section to describe as Full-Stack Developer & Blockchain Specialist
- Revise about section to emphasize full-stack development with blockchain expertise
- Reorder skills to prioritize full-stack technologies
- Fix CSS loading by updating Vercel configuration to properly serve static assets
- Add explicit file paths for CSS and JS assets
- Configure Vercel to handle CSS, JS, and image files correctly

--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,21 @@
     {
       "src": "index.html",
       "use": "@vercel/static"
+    },
+    {
+      "src": "styles.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "script.js",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/(.*\\.(css|js|png|jpg|jpeg|gif|svg|ico))",
+      "dest": "/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
